# hibikido

./: .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  FUTURE_DEVELOPMENT.md  Hibikido_Journal_of_Initiation.docx  MIGRATION_STEPS.md  MONOREPO_MIGRATION.md  QUICK_START.md  README.md  UPDATED_INTERFACE_SCRIPTS.md  test_processor.py
.claude/: 250422-Lisboa-Incomum-Octo.lnk  settings.local.json
docs/: FUTURE_DEVELOPMENT.md  PHILOSOPHY.md  QUICK_START.md  TECHNICAL_GUIDE.md
docs/extras/: FUTURE_DEVELOPMENT.md  Hibikidō Energy Model.md
hibikido-data/: .gitkeep
hibikido-interface/: hibikido.maxpat  isLocked.js  play-manifestation.maxpat  reset-db.bat  start-hibikido-debug.bat  start-hibikido.bat
hibikido-server/: README.md  eslint.config.js  package-lock.json  package.json  prettier.config.js  pyproject.toml  sample_config.json
hibikido-server/src/hibikido/: __init__.py  audio_analyzer.py  bark_analyzer.py  claude_analyzer.py  command_handlers.py  component_factory.py  database_manager.py  embedding_manager.py  energy_analyzer.py  feature_extractor.py  main_server.py  orchestrator.py  osc_handler.py  osc_router.py  semantic_analyzer.py  server_config.py  text_processor.py  tinydb_manager.py  visualizer.py
hibikido-server/src/hibikido/tools/: batch_processor.py
hibikido-server/tests/: manual_testing.md  test_hibikido_database.py  test_invocation_integration.py  test_osc_handler.py  test_smoke.py  test_text_processor.py
