[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hibikido"
version = "0.1.2"
description = "Semantic search engine for musical sounds and effects with perceptual Bark band orchestration"
readme = "README.md"
authors = [
    {name = "Jean-Philippe Drecourt", email = "jpdrecourt@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sentence-transformers>=2.0.0",
    "python-osc>=1.8.0",
    "faiss-cpu>=1.7.0",
    "torch>=1.9.0",
    "tinydb>=4.7.0",
    "numpy>=1.21.0",
    "spacy>=3.4.0",
    "librosa>=0.9.0",
    "soundfile>=0.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

# GPU support for faster embeddings (optional)
gpu = [
    "faiss-gpu>=1.7.0",
    "torch>=1.9.0",
]


[project.scripts]
hibikido-server = "hibikido.main_server:main"

[project.urls]
Homepage = "https://github.com/jpdrecourt/hibikido"
Repository = "https://github.com/jpdrecourt/hibikido.git"
Issues = "https://github.com/jpdrecourt/hibikido/issues"
Documentation = "https://github.com/jpdrecourt/hibikido/wiki"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "orchestrator: marks tests specific to orchestrator functionality",
]

